--- a/w37fhy.conf
+++ b/w37fhy.conf
@@ -23,7 +23,7 @@ round-robin=🔮 负载均衡, server-tag-regex=.*, img-url=https://raw.githubus
 static=🚀 IPLC, server-tag-regex=(手游|游戏|专线|(?i)IPLC|IEPL|game), img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/IPLC.png
 static=📲 电报消息, 🚀 节点选择, ♻️ 自动选择, 🚀 IPLC, 🇸🇬 狮城节点, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 🚀 手动切换, DIRECT, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Telegram.png
 static=📹 油管视频, 🚀 节点选择, ♻️ 自动选择, 🚀 IPLC, 🇸🇬 狮城节点, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 🚀 手动切换, DIRECT, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/YouTube.png
-static=🎥 奈飞视频, 🚀 节点选择, ♻️ 自动选择, 🚀 手动切换, DIRECT, server-tag-regex=(Netflix|netflix|NF|nf|奈飞|解锁流媒体|流媒体), img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Netflix.png
+static=🎥 奈飞视频, 🚀 节点选择, ♻️ 自动选择, 🚀 手动切换, server-tag-regex=(Netflix|netflix|NF|nf|奈飞|解锁流媒体|流媒体), img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Netflix.png
 static=🌍 国外媒体, 🚀 节点选择, ♻️ 自动选择, 🚀 IPLC, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 🚀 手动切换, DIRECT, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/GlobalMedia.png
 static=🌏 国内媒体, DIRECT, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🚀 手动切换, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/DomesticMedia.png
 static=🍎 苹果服务, DIRECT, 🚀 节点选择, 🚀 IPLC, 🇺🇲 美国节点, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇰🇷 韩国节点, 🚀 手动切换, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Apple.png
