--- a/w37fhy.conf
+++ b/w37fhy.conf
@@ -1,3 +1,6 @@
+# QuantumultX 懒人配置完整版 【作者】w37fhy 【电报频道】https://t.me/w37fhy【更新日期】2020/9/1
+# 【YouTube视频教程】 QuantumultX 系列教程：https://fhyurl.tk/quantumultx
+
 [general]
 excluded_routes=192.168.0.0/16, 172.16.0.0/12, 100.64.0.0/10, 10.0.0.0/8
 geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/w37fhy/QuantumultX/master/ip_api.js
