--- a/w37fhy_lite.conf
+++ b/w37fhy_lite.conf
@@ -19,7 +19,7 @@ server=1.0.0.1
 server=8.8.8.8
 
 [policy]
-static=🚀 节点选择, ♻️ 自动选择, 🔮 负载均衡, DIRECT, server-tag-regex=.*, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Available.png
+static=🚀 节点选择, ♻️ 自动选择, 🔮 负载均衡, DIRECT, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Available.png
 available=♻️ 自动选择, server-tag-regex=.*, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Auto.png
 round-robin=🔮 负载均衡, server-tag-regex=.*, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Round_Robin.png
 static=🎯 全球直连, DIRECT, 🚀 节点选择, ♻️ 自动选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Direct.png
