--- a/task.conf
+++ b/task.conf
@@ -1,4 +1,4 @@
-# 定时脚本Task_Remote.conf
+# 定时脚本
 
 # QX目前无法订阅Task
 
@@ -9,7 +9,7 @@
 
 [task_local]
 
-# 定时脚本
+# 定时脚本 格式
 ;* * * * * sample-task.js
 
 # 彩云天气 (By Peng-YM)
