--- a/w37fhy.conf
+++ b/w37fhy.conf
@@ -91,29 +91,11 @@ https:\/\/cccat\.io url script-request-header https://raw.githubusercontent.com/
 # (3) 打开box.js设置API token即可。
 0 0-21/3 * * * https://raw.githubusercontent.com/Peng-YM/QuanX/master/Tasks/caiyun.js, tag=彩云天气, img-url=https://raw.githubusercontent.com/Orz-3/task/master/caiyun.png,enabled=false
 
-
 # 天气+生活指数+降雨提醒
 0 0-21/3 * * * https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Task/minute_forecast.js, tag=天气, img-url=https://raw.githubusercontent.com/Orz-3/task/master/weather.png,enabled=false
 
-# 每日.每周天气
-# 需要填key
-0 8-20/4 * * * nzw9314/sazs34/task/weather_pro.js, tag=每日每周天气, img-url=https://raw.githubusercontent.com/Orz-3/task/master/weather.png,enabled=false
-
-# 每日.48小时天气
-# 需要填key
-0 8-20/4 * * * nzw9314/sazs34/task/weather_pro2.js, tag=每日48小时天气, img-url=https://raw.githubusercontent.com/Orz-3/task/master/weather.png,enabled=false
-
-# 48小时天气
-# 需要填key
-0 8 * * * nzw9314/sazs34/task/weather_hour.js, tag=48小时天气, img-url=https://raw.githubusercontent.com/Orz-3/task/master/weather.png,enabled=false
-
-# 每周天气
-# 需要填key
-0 8 * * * nzw9314/sazs34/task/weather_week.js, tag=每周天气, img-url=https://raw.githubusercontent.com/Orz-3/task/master/weather.png,enabled=false
-
 # App价格版本监控
 0 0-18/6 * * * https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/appstore/AppMonitor.js, tag=App价格版本监控, img-url=https://raw.githubusercontent.com/Orz-3/task/master/appstore.png,enabled=false
-
 
 # 每日一句+ 蚂蚁森林收能量
 30 7 * * * https://raw.githubusercontent.com/nzw9314/QuantumultX/master/yichahucha/cron_daily.js, tag=每日一句+蚂蚁森林收能量, img-url=https://raw.githubusercontent.com/Orz-3/task/master/corn.png,enabled=false
@@ -156,7 +138,6 @@ https:\/\/cccat\.io url script-request-header https://raw.githubusercontent.com/
 # 进入 https://m.weibo.cn 并登陆，获取cookie后进入boxjs配置
 0 * * * * https://raw.githubusercontent.com/zZPiglet/Task/master/Weibo/Weibo.js, tag=微博通知, img-url=https://raw.githubusercontent.com/Orz-3/task/master/weibo.png,enabled=false
 
-
 # GitHub监控(By Peng-YM)
 # name: "",//填写仓库名称，可自定义
 # file_names:[],//可选参数。若需要监控具体文件或目录，请填写路径
@@ -195,13 +176,11 @@ https:\/\/cccat\.io url script-request-header https://raw.githubusercontent.com/
 #打开 APP 手动签到一次: 访问下右下角 `我` > `签到` (头像下面)
 1 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/10000/10000.js, tag=电信营业厅, img-url=https://raw.githubusercontent.com/Orz-3/task/master/10000.png,enabled=false
 
-
 # bilibili
 #打开浏览器访问: https://www.bilibili.com 或 https://live.bilibili.com
 2 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/bilibili/bilibili.js, tag=bilibili, img-url=https://raw.githubusercontent.com/Orz-3/task/master/bilibili.png,enabled=false
 #如需银瓜子转硬币，取消下方注释
 ;2 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/bilibili/bilibili.silver2coin.js, tag=bilibili银瓜子转硬币, img-url=https://raw.githubusercontent.com/Orz-3/task/master/bilibili.png,enabled=false
-
 
 # 网易云音乐
 #1. 先登录: <https://music.163.com/m/login>
@@ -250,8 +229,6 @@ https:\/\/cccat\.io url script-request-header https://raw.githubusercontent.com/
 #打开 APP, 访问下`个人`>`每日签到`(右上角)
 # 6 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/yanxuan/yanxuan.js, tag=网易严选, img-url=https://raw.githubusercontent.com/Orz-3/task/master/yanxuan.png,enabled=false
 
-
-
 # QQ音乐
 #打开 APP 然后手动签到 1 次
 7 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/qqmusic/qqmusic.js, tag=QQ音乐, img-url=https://raw.githubusercontent.com/Orz-3/task/master/qqmusic.png,enabled=false
@@ -268,13 +245,10 @@ https:\/\/cccat\.io url script-request-header https://raw.githubusercontent.com/
 #打开 APP 然后手动签到 1 次
 8 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/mgtv/mgtv.js, tag=芒果TV, img-url=https://raw.githubusercontent.com/Orz-3/task/master/mgtv.png,enabled=false
 
-
-
 # 中国联通
 #1打开 APP , 进入签到页面, 系统提示: `获取刷新链接: 成功`,然后手动签到 1 次
 #2首页>天天抽奖, 系统提示 `2` 次: `获取Cookie: 成功 (登录抽奖)` 和 `获取Cookie: 成功 (抽奖次数)`
 8 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/10010/10010.js, tag=中国联通, img-url=https://raw.githubusercontent.com/Orz-3/task/master/10010.png,enabled=false
-
 
 # 中国移动
 #打开 APP , 进入签到页面, 系统提示: `获取刷新链接: 成功`,然后手动签到 1 次
@@ -288,7 +262,6 @@ https:\/\/cccat\.io url script-request-header https://raw.githubusercontent.com/
 #打开 APP , 然后手动签到 1 次, (`首页` > `红包签到`)
 10 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/meituan/meituan.js, tag=美团, img-url=https://raw.githubusercontent.com/Orz-3/task/master/meituan.png,enabled=false
 
-
 # 百词斩
 #打开 APP 手动签到一次: 访问下右下角 `我` > `我的铜板` > `加入百词斩小班` > `去查看` > `我的小班进去 领铜板`
 0 8-20/4 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/bcz/bcz.js, tag=百词斩, img-url=https://raw.githubusercontent.com/Orz-3/task/master/bcz.png,enabled=false
@@ -297,7 +270,6 @@ https:\/\/cccat\.io url script-request-header https://raw.githubusercontent.com/
 #打开 APP, 访问下`我的`>`积分`
 10 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/mcdd/mcdd.js, tag=叮咚买菜, img-url=https://raw.githubusercontent.com/Orz-3/task/master/mcdd.png,enabled=false
 
-
 # 樊登读书
 #打开 APP 手动签到一次: 访问下右下角 `我的` > `签到`
 10 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/fandeng/fandeng.js, tag=樊登读书, img-url=https://raw.githubusercontent.com/Orz-3/task/master/fandeng.png,enabled=false
@@ -305,8 +277,6 @@ https:\/\/cccat\.io url script-request-header https://raw.githubusercontent.com/
 # 全民K歌
 #打开 APP 手动签到一次: 访问下右下角 `我的` > `任务中心` > `签到`
 10 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/qmkg/qmkg.js, tag=全民K歌, img-url=https://raw.githubusercontent.com/Orz-3/task/master/qmkg.png,enabled=false
-
-
 
 # 京东到家
 #手机浏览器打开`https://daojia.jd.com/html/index.html` 点击签到
@@ -324,7 +294,6 @@ https:\/\/cccat\.io url script-request-header https://raw.githubusercontent.com/
 # 打开 APP 我 > 签到 (右上角, 不用手动签到)
 12 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/wps/wps.js, tag=WPS, img-url=https://raw.githubusercontent.com/Orz-3/task/master/wps.png,enabled=false
 
-
 # 智行火车
 # 打开 APP 手动签到一次: 访问下右下角 `个人中心` > `签到`
 13 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/zxhc/zxhc.js, tag=智行火车, img-url=https://raw.githubusercontent.com/Orz-3/task/master/zxhc.png,enabled=false
@@ -335,18 +304,15 @@ https:\/\/cccat\.io url script-request-header https://raw.githubusercontent.com/
 # 首页  > 天天低价
 13 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/suning/suning.js, tag=苏宁易购, img-url=https://raw.githubusercontent.com/Orz-3/task/master/suning.png,enabled=false
 
-
 # 豆瓣时间
 # 打开 APP 手动签到一次:  `市集` > `豆瓣时间` > `签到`
 13 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/dbsj/dbsj.js, tag=豆瓣时间, img-url=https://raw.githubusercontent.com/Orz-3/task/master/dbsj.png,enabled=false
-
 
 # 趣头条
 # 打开 APP 进入签到:  `右上角` > `签到`
 # 阅读篇数获取Cookie:`小视频`中播放一段时间视频即可获取,具体的阅读篇数奖励请到应用内手动点击
 # 首页金币奖励:此Cookie在首页的推荐中随机出现,随机获取,并不一定会出现。
 13 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/qtt/qtt.js, tag=趣头条, img-url=https://raw.githubusercontent.com/Orz-3/task/master/qtt.png,enabled=false
-
 
 # 有道云笔记
 3 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/noteyoudao/noteyoudao.js, tag=有道云笔记,img-url=https://raw.githubusercontent.com/Orz-3/task/master/noteyoudao.png,enabled=false
@@ -363,11 +329,9 @@ https:\/\/cccat\.io url script-request-header https://raw.githubusercontent.com/
 # > 万达电影
 10 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/wanda/wanda.js, tag=wanda-签到, img-url=https://raw.githubusercontent.com/Orz-3/task/master/wanda.png,enabled=false
 
-
 # > IT之家
 # 获取方式:app进入签到页面获取
 10 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/ithome/ithome.js, tag=ithome-签到, img-url=https://raw.githubusercontent.com/Orz-3/task/master/ithome.png, enabled=false
-
 
 # @NobyDa
 
@@ -391,15 +355,10 @@ https:\/\/cccat\.io url script-request-header https://raw.githubusercontent.com/
 #打开App,访问下右下角 `我的
 2 0 * * * https://raw.githubusercontent.com/NobyDa/Script/master/Bilibili-DailyBonus/Manga.js, tag=哔哩哔哩漫画, img-url=https://raw.githubusercontent.com/Orz-3/task/master/manga.png,enabled=false
 
-
-
 # > 机场签到 (by evilbutcher & Neurogram )
 # 使用BoxJs配置订阅及密码
 2 0 * * * https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/glados/checkin_env.js, tag=机场签到, img-url=https://raw.githubusercontent.com/Orz-3/task/master/airport.png,enabled=false
 5 0 * * * https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/glados/checkincookie_env.js, tag=机场签到cookie版, img-url=https://raw.githubusercontent.com/Orz-3/task/master/airport.png, enabled=false
-# 联通查话费流量
-# 需要自己填key
-3 0 * * * nzw9314/NavePnow/Scripts/10010+_qx.js, tag=联通查话费流量, img-url=https://raw.githubusercontent.com/Orz-3/task/master/10010.png,enabled=false
 
 # 饿了么   (By @syzzzf)
 #打开 APP, 访问下`我的`>`签到领红包`(左上角)
@@ -421,7 +380,6 @@ https:\/\/cccat\.io url script-request-header https://raw.githubusercontent.com/
 #3.脚本运行一次阅读一篇文章，请不要连续运行，防止封号，可设置每几分钟运行一次
 #4.打开腾讯新闻app，阅读一篇文章，倒计时结束后即可获取Cookie,红包ID的Cookie，点击红包倒计时，或者点击活动页面的专属红包任务，有些账号可能无
 4 0 * * * https://raw.githubusercontent.com/Sunert/Scripts/master/Task/txnews.js, tag=腾讯新闻, img-url=https://raw.githubusercontent.com/Orz-3/task/master/txnews.png,enabled=false
-
 
 # 招行信用卡(公众号) (By @iNotification)
 #招商银行信用卡微信公众号："领积分 - 签到领积分"
@@ -466,7 +424,6 @@ https:\/\/cccat\.io url script-request-header https://raw.githubusercontent.com/
 # 2.在未签到情况下，先禁用第一条Cookie链接，然后再次进入签到，通知获取签到Cookie成功
 6 0 * * * https://raw.githubusercontent.com/Sunert/Scripts/master/Task/sinanews.js, tag=新浪新闻, img-url=https://raw.githubusercontent.com/Orz-3/task/master/sinanews.png,enabled=false
 
-
 # 数码之家 (By @Macsuny)
 # 登陆数码之家电脑版网页，签到一次,即可
 0 9 * * * https://raw.githubusercontent.com/Sunert/Scripts/master/Task/mydigit.js,tag=数码之家, img-url=https://raw.githubusercontent.com/Orz-3/task/master/mydigit.png, enabled=false
@@ -482,16 +439,15 @@ https:\/\/cccat\.io url script-request-header https://raw.githubusercontent.com/
 
 # 小黑盒 (By @zZPiglet)
 # 进入"小黑盒" - "我"，若弹出"首次写入heybox Cookie 成功"即可
-0 * * * * https://raw.githubusercontent.com/zZPiglet/Task/master/heybox/heybox.js, tag=小黑盒, img-url=https://raw.githubusercontent.com/Orz-3/task/master/heybox.png
+0 * * * * https://raw.githubusercontent.com/zZPiglet/Task/master/heybox/heybox.js, tag=小黑盒, img-url=https://raw.githubusercontent.com/Orz-3/task/master/heybox.png,enabled=false
 
 # 豆瓣电影日历 (By @zZPiglet)
 # 进入  widget 界面（iOS 13 负一屏），添加「豆瓣·电影日历」，并重新进入此界面使其刷新获取内容，若弹出"首次写入 MovieCalendar APIKey 成功"即可正常食用
-0 18 * * * https://raw.githubusercontent.com/zZPiglet/Task/master/MovieCalendar/MovieCalendar.js, tag=电影日历
+0 18 * * * https://raw.githubusercontent.com/zZPiglet/Task/master/MovieCalendar/MovieCalendar.js, tag=电影日历,enabled=false
 
 # 微信小程序-喜马拉雅 (By @makexp)
 # 微信小程序 - 喜马拉雅 - 我的： 签到 " 获取 Cookie
 6 0 * * * https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Task/xmly_wc.js, tag=微信喜马拉雅, img-url=https://raw.githubusercontent.com/Orz-3/task/master/ximalaya.png,enabled=false
-
 
 # 京东农场 (By liuxiaoyucc、lxk0301 & iepngs)
 # 京东App - 右下角"我的"- 游戏与互动-东东农场
@@ -543,31 +499,25 @@ https:\/\/cccat\.io url script-request-header https://raw.githubusercontent.com/
 # 2. 点进一个超话页面，手动签到一次。弹出通知，提示获取超话签到链接成功。 若之前所有已经签到，关注一个新超话进行签到。
 3 0 * * * https://raw.githubusercontent.com/toulanboy/scripts/master/weibo/weibotalk.js, tag=微博超话, img-url=https://raw.githubusercontent.com/Orz-3/task/master/weibo.png,enabled=false
 
-
 # qq会员成长值签到 (By @lowking)
 # 手机qq进入左侧会员，滑动即可
 0 0 0,1 * * ? https://raw.githubusercontent.com/lowking/Scripts/master/QQVip/qqVipCheckIn.js, tag=qq会员成长值, img-url=https://raw.githubusercontent.com/Orz-3/task/master/qqvip.png, enabled=false
 
-
 # 陌陌极速版(By 红鲤鱼与绿鲤鱼与驴)
 0 2,13,25,45,55 0-23 * * ? https://raw.githubusercontent.com/wangdelu2020/hongliyu/master/momosign.js, tag=陌陌极速版签到, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/momo.png, enabled=false
-
 
 # 无忧行 (by @vinewx)
 # 1.打开无忧行App, 通知成功写入「 AccountID | UserID | Mobile | Token 」.
 # 2.依次点击"我的" 👉 "任务中心". 通知成功写入「 TaskID 」.
 0 9 * * * https://ooxx.be/js/jegotrip.js, tag=无忧行, img-url=https://raw.githubusercontent.com/Orz-3/task/master/jegotrip.png, enabled=false
 
-
 # NGA刮墙 (by chouchoui)
 # 杀掉NGA后台并重新打开NGA，提示Cookie获取成功
 10 0 * * * https://raw.githubusercontent.com/chouchoui/QuanX/master/Scripts/nga/nga.js, tag=NGA刮墙, enabled=false, img-url=https://raw.githubusercontent.com/Orz-3/task/master/nga.png
 
-
 # 网易游戏会员签到(By id77)
 # 点击保守/运气签到，会一直使用对应类型签到，自主选择
 2 1 * * * https://raw.githubusercontent.com/id77/QuantumultX/master/task/163GameVip.js, tag=网易游戏会员签到, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/163GameVip.png, enabled=false
-
 
 # 电信余额提醒(By id77)
 # 进入【天翼账号中心】公众号 点 查询充值-查余额
