--- a/w37fhy.conf
+++ b/w37fhy.conf
@@ -8,8 +8,10 @@ resource_parser_url= https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/mast
 profile_img_url= https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/img/dragonball/1.PNG
 network_check_url=http://www.baidu.com/
 server_check_url=http://www.gstatic.com/generate_204
+
 #第一个filter为4g模式开启规则分流，第二个filter为其他wifi下开启规则分流，第三个wifi1修改成你路由器翻墙的wifi名开启直连模式，第四个wifi2为你需要全局代理的wifi名（这个一般不需要随便写就行）
-running_mode_trigger=filter, filter, wifi1:all_direct, wifi2: all_proxy
+#默认关闭根据wifi切换模式，如需开启，删除下方的“#”即可！
+#running_mode_trigger=filter, filter, wifi1:all_direct, wifi2: all_proxy
 
 [dns]
 server=114.114.114.114
