--- a/w37fhy_diy.conf
+++ b/w37fhy_diy.conf
@@ -94,7 +94,7 @@ https:\/\/nebula\.kuaishou\.com\/rest\/n\/nebula\/activity\/earn\/overview url s
 
 #机场签到Cookie
 https:\/\/cccat\.io url script-request-header https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/glados/checkincookie_env.js
-（其中https:\/\/cccat\.io需要替换为你自己的机场链接）
+#（其中https:\/\/cccat\.io需要替换为你自己的机场链接）
 
 #淘宝历史价格
 ^http://.+/amdc/mobileDispatch url script-request-body https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
