切换会话功能改为默认关闭，需要手动开启

--- a/w37fhy_diy.conf
+++ b/w37fhy_diy.conf
@@ -225,7 +225,7 @@ https:\/\/cccat\.io url script-request-header https://raw.githubusercontent.com/
 
 # 切换会话
 # 访问: https://8.8.8.8/home管理
-0 12 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, tag=切换会话,img-url=https://raw.githubusercontent.com/Orz-3/task/master/box.png,enabled=true
+0 12 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, tag=切换会话,img-url=https://raw.githubusercontent.com/Orz-3/task/master/box.png,enabled=false
 
 [mitm]
 hostname = api.m.jd.com, *.bilibili.com, music.163.com, act.10010.com, m.client.10010.com, iface?.iqiyi.com, nebula.kuaishou.com, trade-acs.m.taobao.com, mp.weixin.qq.com, *.amemv.com, ms.jr.jd.com, wapside.189.cn, wx.10086.cn
