创建小火箭解锁网易云灰色音乐配置

--- a/NeteaseMusic.conf
+++ b/NeteaseMusic.conf
@@ -3,7 +3,7 @@
 dns-server = system,114.114.114.114,112.124.47.27,8.8.8.8,8.8.4.4
 bypass-system = true
 ipv6 = false
-update-url = https://github.com/w37fhy/QuantumultX/blob/master/NeteaseMusic.conf
+update-url = https://raw.githubusercontent.com/w37fhy/QuantumultX/master/NeteaseMusic.conf
 [Rule]
 DOMAIN-SUFFIX,music.163.com,PROXY
 DOMAIN-SUFFIX,interface.music.163.com,PROXY
