--- a/surge_diy.conf
+++ b/surge_diy.conf
@@ -14,8 +14,8 @@ dns-server = 119.29.29.29,223.5.5.5,114.114.114.114
 [Proxy Group]
 👀Wifi无忧切换 = ssid, default = 🚀 节点选择, cellular = 🚀 节点选择, "FHY_5G" = DIRECT
 🚀 节点选择 = select, DIRECT, ♻️ 自动选择, 👋 手动切换
-👋 手动切换 = select, policy-path=https://subcon.py6.pw/sub?target=surge&ver=4&url=https%3A%2F%2Ffreemycloud.site%2Flink%2FTzGjuxV1apWBOPvB%3Fsub%3D3&insert=false&config=https%3A%2F%2Fraw.githubusercontent.com%2FACL4SSR%2FACL4SSR%2Fmaster%2FClash%2Fconfig%2FACL4SSR_Online_Mini_MultiMode.ini&exclude=%E5%85%AC%E7%9B%8A%7C%E7%BD%91%E5%9D%80%7C%E8%BF%87%E6%9C%9F%7C%E5%88%B0%E6%9C%9F%7C%E5%89%A9%E4%BD%99%7C%E6%B5%81%E9%87%8F&include=IPLC%7C%E9%A6%99%E6%B8%AF%7C%E5%8F%B0%E6%B9%BE%7CIEPL&emoji=true&list=true&udp=false&tfo=false&scv=false&fdn=false&sort=false, update-interval=0
-♻️ 自动选择 = url-test, url=http://www.gstatic.com/generate_204, policy-path=https://subcon.py6.pw/sub?target=surge&ver=4&url=https%3A%2F%2Ffreemycloud.site%2Flink%2FTzGjuxV1apWBOPvB%3Fsub%3D3&insert=false&config=https%3A%2F%2Fraw.githubusercontent.com%2FACL4SSR%2FACL4SSR%2Fmaster%2FClash%2Fconfig%2FACL4SSR_Online_Mini_MultiMode.ini&exclude=%E5%85%AC%E7%9B%8A%7C%E7%BD%91%E5%9D%80%7C%E8%BF%87%E6%9C%9F%7C%E5%88%B0%E6%9C%9F%7C%E5%89%A9%E4%BD%99%7C%E6%B5%81%E9%87%8F&include=IPLC%7C%E9%A6%99%E6%B8%AF%7C%E5%8F%B0%E6%B9%BE%7CIEPL&emoji=true&list=true&udp=false&tfo=false&scv=false&fdn=false&sort=false, update-interval=86400, timeout=0, interval=300, tolerance=0
+👋 手动切换 = select, policy-path=https://subcon.py6.pw/sub?target=surge&ver=4&emoji=true&list=true&udp=false&tfo=false&scv=false&fdn=false&sort=false, update-interval=0
+♻️ 自动选择 = url-test, url=http://www.gstatic.com/generate_204, policy-path=https://subcon.py6.pw/sub?target=surge&ver=4&emoji=true&list=true&udp=false&tfo=false&scv=false&fdn=false&sort=false, update-interval=86400, timeout=0, interval=300, tolerance=0
 🎯 全球直连 = select, DIRECT, 🚀 节点选择
 🛑 全球拦截 = select, REJECT, DIRECT
 🎶 网易音乐 = select, REJECT, DIRECT, 解锁网易云音乐
