--- a/surge_diy.conf
+++ b/surge_diy.conf
@@ -1,15 +1,25 @@
-# Surge 懒人配置DIY版 【作者】w37fhy 【电报频道】https://t.me/w37fhy【更新日期】2020/9/19
+# Surge 懒人配置DIY版v2.0 【作者】w37fhy 【电报频道】https://t.me/w37fhy【更新日期】2020/9/19
 
 [General]
+# 延迟测试
+# > Internet 测试 URL
+internet-test-url = http://www.aliyun.com
+# > 代理测速 URL
+proxy-test-url = http://www.gstatic.com/generate_204
+# > 测试超时（秒）
+# test-timeout = 5
 loglevel = notify
 bypass-system = true
 skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,localhost,*.local,e.crashlytics.com,captive.apple.com,::ffff:0:0:0:0/1,::ffff:128:0:0:0/1
 # DNS设置或根据自己网络情况进行相应设置
 bypass-tun = 192.168.0.0/16,10.0.0.0/8,172.16.0.0/12
-dns-server = 119.29.29.29,223.5.5.5,114.114.114.114
+dns-server = 119.29.29.29,223.5.5.5,114.114.114.114,system
 
 [Proxy]
 解锁网易云音乐 = http, 106.52.127.72, 19951
+SS节点示例 = ss, 1.2.3.4, 443, encrypt-method=chacha20-ietf-poly1305, password=password
+V2ray节点示例 = vmess, v2ray.cool, 443, username=a3482e88-686a-4a58-8126-99c9df64b7bf, tls=true, ws=true, ws-path=/v2ray.cool/
+Trojan节点示例 = trojan, trojan.com, 443, password=password
 
 [Proxy Group]
 👀Wifi无忧切换 = ssid, default = 🚀 节点选择, cellular = 🚀 节点选择, "FHY_5G" = DIRECT
