--- a/surge_lite.conf
+++ b/surge_lite.conf
@@ -10,6 +10,9 @@ dns-server = 119.29.29.29,223.5.5.5,114.114.114.114
 
 [Proxy]
 解锁网易云音乐 = http, 106.52.127.72, 19951
+SS节点示例 = ss, 1.2.3.4, 443, encrypt-method=chacha20-ietf-poly1305, password=password
+V2ray节点示例 = vmess, v2ray.cool, 443, username=a3482e88-686a-4a58-8126-99c9df64b7bf, tls=true, ws=true, ws-path=/v2ray.cool/
+Trojan节点示例 = trojan, trojan.com, 443, password=password
 
 [Proxy Group]
 👀Wifi无忧切换 = ssid, default = 🚀 节点选择, cellular = 🚀 节点选择, "FHY_5G" = 🎯 全球直连
