修复wifi切换不可用问题

--- a/surge_lite.conf
+++ b/surge_lite.conf
@@ -15,7 +15,7 @@ V2ray节点示例 = vmess, v2ray.cool, 443, username=a3482e88-686a-4a58-8126-99c
 Trojan节点示例 = trojan, trojan.com, 443, password=password
 
 [Proxy Group]
-👀Wifi无忧切换 = ssid, default = 🚀 节点选择, cellular = 🚀 节点选择, "FHY_5G" = 🎯 全球直连
+👀 Wifi无忧切换 = ssid, default = 🚀 节点选择, cellular = 🚀 节点选择, "FHY_5G" = 🎯 全球直连
 🚀 节点选择 = select, DIRECT, ♻️ 自动选择, 👋 手动切换
 👋 手动切换 = select, policy-path=https://subcon.py6.pw/sub?target=surge&ver=4&emoji=true&list=true&udp=false&tfo=false&scv=false&fdn=false&sort=false, update-interval=0
 ♻️ 自动选择 = url-test, url=http://www.gstatic.com/generate_204, policy-path=https://subcon.py6.pw/sub?target=surge&ver=4&emoji=true&list=true&udp=false&tfo=false&scv=false&fdn=false&sort=false, update-interval=86400, timeout=0, interval=300, tolerance=0
@@ -36,13 +36,13 @@ RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgr
 # 谷歌国内业务-直连
 RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list,🎯 全球直连
 # 电报规则-代理
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list,🚀 节点选择
+RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list,👀 Wifi无忧切换
 # 网易云音乐
 RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list,🎶 网易音乐
 # 国外媒体-代理
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list,🚀 节点选择
+RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list,👀 Wifi无忧切换
 # 国外域名等规则（轻量级）-代理
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list,🚀 节点选择
+RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list,👀 Wifi无忧切换
 # 国内域名-直连
 RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list,🎯 全球直连
 # 国内云服务商IP段-直连
