--- a/surge_diy.conf
+++ b/surge_diy.conf
@@ -55,7 +55,7 @@ RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDom
 # 国内云服务商IP段-直连
 RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list,🎯 全球直连
 # 解锁网易云后出现国内歌曲无法播放等异常则启用下面这行
-#DOMAIN-SUFFIX,music.126.net, 全球直连
+#DOMAIN-SUFFIX,music.126.net,🎯 全球直连
 # GEOIP数据库内国内IP-直连
 GEOIP,CN,🎯 全球直连
 # 以上规则未包含的其他访问
