增加京东最新脚本

--- a/task.conf
+++ b/task.conf
@@ -589,6 +589,12 @@
 0 5 0 * * * https://raw.githubusercontent.com/lxk0301/scripts/master/jd_superMarket.js, tag=京小超-任务, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jxc.png, enabled=true
 30 7 0 * * * https://raw.githubusercontent.com/lxk0301/scripts/master/jd_blueCoin.js, tag=京小超-小费, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jxc.png, enabled=true
 
+#京东进店领豆
+10 0 * * * https://raw.githubusercontent.com/lxk0301/scripts/master/jd_shop.js, tag=进店领豆, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_shop.png, enabled=true
+
+#京东全民开红包
+9 0 * * * https://raw.githubusercontent.com/lxk0301/scripts/master/jd_redPacket.js, tag=京东全民开红包, img-url=https://raw.githubusercontent.com/Orz-3/task/master/jd.png, enabled=true
+
 # 叮咚农场(By iepngs)
 # 叮咚买菜App - 右下角"我的"- 叮咚农场
 1 8,12,17 * * * https://raw.githubusercontent.com/iepngs/Script/master/dingdong/index.js, tag=叮咚农场, img-url=https://raw.githubusercontent.com/Orz-3/task/master/mcdd.png, enabled=false
