--- a/surge_diy.conf
+++ b/surge_diy.conf
@@ -59,7 +59,7 @@ RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCom
 # GEOIP数据库内国内IP-直连
 GEOIP,CN,🎯 全球直连
 # 以上规则未包含的其他访问
-FINAL,🐟 漏网之鱼
+FINAL,🐟 漏网之鱼, dns-failed
 
 [MITM]
 hostname = trade-acs.m.taobao.com, api.m.jd.com, *.bilibili.com, music.163.com, act.10010.com, m.client.10010.com, wapside.189.cn:9001, ifac*.iqiyi.com, nebula.kuaishou.com, mp.weixin.qq.com, *.amemv.com, ms.jr.jd.com
