--- a/surge_lite.conf
+++ b/surge_lite.conf
@@ -52,7 +52,7 @@ RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCom
 # GEOIP数据库内国内IP-直连
 GEOIP,CN,🎯 全球直连
 # 以上规则未包含的其他访问
-FINAL,🐟 漏网之鱼
+FINAL,🐟 漏网之鱼, dns-failed
 
 [MITM]
 
