添加京东手机狂欢城脚本

--- a/loon_task.conf
+++ b/loon_task.conf
@@ -60,6 +60,9 @@ cron "5 0 * * *" script-path=https://raw.githubusercontent.com/toulanboy/scripts
 #京东全民开红包
 cron "1 1 * * *" script-path=https://raw.githubusercontent.com/lxk0301/scripts/master/jd_redPacket.js, tag=京东全民开红包
 
+# 京东手机狂欢城
+cron "1 0-18/6 * * *" script-path=https://raw.githubusercontent.com/lxk0301/scripts/master/jd_818.js, tag=京东手机狂欢城
+
 #宠汪汪邀请助力与赛跑助力
 cron "15 10 * * *" script-path=https://raw.githubusercontent.com/lxk0301/scripts/master/jd_joy_run.js, tag=宠汪汪邀请助力与赛跑助力
 
