--- a/loon_task.conf
+++ b/loon_task.conf
@@ -48,6 +48,9 @@ cron "0 0 0 * * *" script-path=https://raw.githubusercontent.com/lxk0301/scripts
 # 取关京东店铺商品
 cron "55 23 * * *" script-path=https://raw.githubusercontent.com/lxk0301/scripts/master/jd_unsubscribe.js,tag=取关京东店铺商品
 
+#京东星推官
+cron "2,10 0 * * *" script-path=https://raw.githubusercontent.com/lxk0301/scripts/master/jd_xtg.js,tag=京东星推官
+
 # 进店领豆
 cron "10 0 * * *" script-path=https://raw.githubusercontent.com/lxk0301/scripts/master/jd_shop.js,tag=进店领豆
 
