增加京东全民营业领金币，调整部分cron

--- a/w37fhy_diy.conf
+++ b/w37fhy_diy.conf
@@ -158,6 +158,9 @@ https:\/\/cccat\.io url script-request-header https://raw.githubusercontent.com/
 # 宠汪汪偷好友积分与狗粮
 0 0,6 * * * https://raw.githubusercontent.com/lxk0301/scripts/master/jd_joy_steal.js, tag=宠汪汪偷好友积分与狗粮, img-url=https://raw.githubusercontent.com/znz1992/Gallery/master/jdww.png, enabled=true
 
+# 京东全民营业领金币
+20 * * * * https://raw.githubusercontent.com/lxk0301/scripts/master/jd_collectProduceScore.js
+
 # 京东种豆得豆 (By uniqueque、lxk0301 & iepngs)
 1 7-21/2 * * * https://raw.githubusercontent.com/lxk0301/scripts/master/jd_plantBean.js, tag=种豆得豆, img-url=https://raw.githubusercontent.com/znz1992/Gallery/master/jdzd.png, enabled=true
 
@@ -200,7 +203,7 @@ https:\/\/cccat\.io url script-request-header https://raw.githubusercontent.com/
 15 10 * * * https://raw.githubusercontent.com/lxk0301/scripts/master/jd_joy_run.js, tag=宠汪汪邀请助力与赛跑助力
 
 #京东星推官
-2 0 * * * https://raw.githubusercontent.com/lxk0301/scripts/master/jd_xtg.js, tag=京东星推官, enabled=true
+0 0 * * * https://raw.githubusercontent.com/lxk0301/scripts/master/jd_xtg.js, tag=京东星推官, enabled=true
 
 
 
