增加部分脚本，建议更新

--- a/loon_task.conf
+++ b/loon_task.conf
@@ -10,7 +10,13 @@ hostname = api.m.jd.com, *.bilibili.com, music.163.com, act.10010.com, m.client.
 
 # 京东签到
 #浏览器登录 https://bean.m.jd.com 点击签到并且出现签到日历
-cron "5,10 0 * * *" ,timeout=30, script-path=https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js,tag=京东签到
+cron "1 0 * * *" ,timeout=30, script-path=https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js,tag=京东签到
+
+# 京豆变动通知
+cron "50 23 * * *" script-path=https://raw.githubusercontent.com/lxk0301/scripts/master/jd_bean_change.js, tag=京豆变动通知
+
+# 京东物流
+cron "0 12 * * *" script-path=https://raw.githubusercontent.com/id77/QuantumultX/master/task/jdWuLiu.js
 
 # 东东农场
 cron "5 6-18/6 * * *" script-path=https://raw.githubusercontent.com/lxk0301/scripts/master/jd_fruit.js,tag=东东农场
@@ -46,13 +52,16 @@ cron "11 1-23/2 * * *" script-path=https://raw.githubusercontent.com/lxk0301/scr
 cron "1 0 0 * * *" script-path=https://raw.githubusercontent.com/lxk0301/scripts/master/jd_blueCoin.js,tag=京小超兑换奖品
 
 # 取关京东店铺商品
-cron "55 0,23 * * *" script-path=https://raw.githubusercontent.com/lxk0301/scripts/master/jd_unsubscribe.js,tag=取关京东店铺商品
+cron "55 23 * * *" script-path=https://raw.githubusercontent.com/lxk0301/scripts/master/jd_unsubscribe.js,tag=取关京东店铺商品
 
 #京东星推官
 cron "0 0 * * *" script-path=https://raw.githubusercontent.com/lxk0301/scripts/master/jd_xtg.js,tag=京东星推官
 
+# 京东时光机
+cron "20 0-20/4 * * *" script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_timeMachine.js, tag=京东时光机
+
 # 进店领豆
-cron "2 0 * * *" script-path=https://raw.githubusercontent.com/lxk0301/scripts/master/jd_shop.js,tag=进店领豆
+cron "10 0 * * *" script-path=https://raw.githubusercontent.com/lxk0301/scripts/master/jd_shop.js,tag=进店领豆
 
 #摇京豆
 cron "5 0 * * *" script-path=https://raw.githubusercontent.com/lxk0301/scripts/master/jd_club_lottery.js,tag=摇京豆
@@ -78,6 +87,15 @@ cron "20 * * * *" script-path=https://raw.githubusercontent.com/lxk0301/scripts/
 #京东白条
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_baiTiao.js, tag=京东白条
 
+#京东来客有礼
+cron "04 00 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/lkyl.js, enabled=true, tag=来客有礼
+
+#京东金提额
+cron "10 10 8 * * *" script-path=https://raw.githubusercontent.com/barrym-chen/Script/master/tie/tie_sign.js, tag=京东金融提额
+
+#京东特权值
+cron "5 8 * * *" script-path=https://raw.githubusercontent.com/iisams/Scripts/master/liwo/jdtqz.js, tag= 京东特权值
+
 # 爱奇艺
 #打开爱奇艺App后(AppStore中国区)，点击"我的", 如通知成功获取cookie, 则可以使用此签到脚本.
 #获取Cookie后, 请将Cookie脚本禁用并移除主机名，以免产生不必要的MITM.
@@ -101,6 +119,9 @@ cron "10 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scrip
 # 获取方法一，直接首页点击主页红包倒计时
 # 获取方法二，在直播live页面中打开"送礼开宝箱"
 cron "6 0 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/kuaishou.js, tag=快手极速版
+
+# 美团
+cron "3 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/meituan/meituan.js
 
 # 中国联通
 #1打开 APP , 进入签到页面, 系统提示: `获取刷新链接: 成功`,然后手动签到 1 次
