--- a/loon_task.conf
+++ b/loon_task.conf
@@ -16,7 +16,7 @@ cron "1 0 * * *" ,timeout=30, script-path=https://raw.githubusercontent.com/Noby
 cron "50 23 * * *" script-path=https://raw.githubusercontent.com/lxk0301/scripts/master/jd_bean_change.js, tag=京豆变动通知
 
 # 京东物流
-cron "0 12 * * *" script-path=https://raw.githubusercontent.com/id77/QuantumultX/master/task/jdWuLiu.js, tag=京豆物流
+cron "0 12 * * *" script-path=https://raw.githubusercontent.com/id77/QuantumultX/master/task/jdWuLiu.js, tag=京东物流
 
 # 东东农场
 cron "5 6-18/6 * * *" script-path=https://raw.githubusercontent.com/lxk0301/scripts/master/jd_fruit.js,tag=东东农场
@@ -88,7 +88,7 @@ cron "20 * * * *" script-path=https://raw.githubusercontent.com/lxk0301/scripts/
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_baiTiao.js, tag=京东白条
 
 #京东来客有礼
-cron "04 00 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/lkyl.js, enabled=true, tag=来客有礼
+cron "00 8,16 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/lkyl.js, enabled=true, tag=来客有礼
 
 #京东金提额
 #在京东金融app内搜索摇钱树即可进入小游戏页面，然会选择提鹅小游戏,先参加一下这个活动，这是前提
